tests/examples/fail/sorts/assume.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
mutable x: s

assume always x
assert x = x'
